<resources>
    <string name="app_name" translatable="false">SubStats</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_statistics">Statistics</string>
    <string name="ping" translatable="false">Ping!</string>
    <string name="license">License</string>
    <string name="base_url">Base URL</string>
    <string name="api_key">API Key</string>
    <string name="save">Save</string>
    <string name="test_connection">Test Connection</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_test_response">Test Response: %1s</string>
    <string name="response_failed">Failed</string>
    <string name="title_most_played_songs">Most Played Songs</string>
    <string name="title_most_played_artists">Most Played Artists</string>
    <string name="play_count">Play Count:</string>
    <string name="last_played">Last Played:</string>
    <string name="cover_art">Cover Art</string>
    <string name="never">Never</string>
    <string name="invalid_base_url">The configured Base URL seems to be wrong.\nPlease check it and try again.</string>
    <string name="title_most_played_albums">Most Played Albums</string>
    <string name="response_timeout">Timeout</string>
    <string name="response_error_code" translatable="false">Error %1d</string>
    <string name="response_error_message" translatable="false">: %1s</string>
    <string name="arrow_right">Arrow pointing right</string>
    <string name="title_song_details">Song Details</string>
    <string name="error_no_entity">Could not load the requested Resource</string>
    <string name="label_artist">Artist:</string>
    <string name="label_album" translatable="false">Album:</string>
    <string name="label_disc_number">Disc Number:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_year">Year:</string>
    <string name="label_genre" translatable="false">Genre:</string>
    <string name="label_created">Created on:</string>
    <string name="label_file_type">File Type:</string>
    <string name="title_artist_details">Artist Details</string>
    <string name="copied_text">Copied %1s</string>
    <string name="name" translatable="false">Name:</string>
    <string name="label_album_count">Album Count:</string>
    <string name="title_album_details" translatable="false">Album Details</string>
    <string name="label_song_count">Song Count:</string>
    <string name="title_most_played_genres">Most Played Genres</string>
    <string name="title_genre_details" translatable="false">Genre Details</string>
    <string name="title_most_played_playlists">Most Played Playlists</string>
    <string name="label_modified">Modified on:</string>
    <string name="label_owner">Owner:</string>
    <string name="label_public">Public:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_playlist_details">Playlist Details</string>
    <string name="error_no_entries">No entries</string>
    <string name="label_type">Type:</string>
    <string name="search_hint">Search songs, artists or albums</string>
    <string name="unknown">Unknown</string>
    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="album" translatable="false">Album</string>
</resources>