<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment"
        android:orientation="vertical"
        android:gravity="center_vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

        <TextView
                android:text="@string/base_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextBaseUrl"
                android:id="@+id/textBaseUrl" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:inputType="textUri"
                android:ems="10"
                android:id="@+id/editTextBaseUrl" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

        <TextView
                android:text="@string/api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextApiKey"
                android:id="@+id/textApiKey" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextApiKey" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSave" />

        <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

        <Button
                android:text="@string/test_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonTest" />
    </LinearLayout>


</LinearLayout>